# ChangeLog for gnome-base/eel
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/Attic/ChangeLog,v 1.216 2009/05/14 21:24:33 eva Exp $

  14 May 2009; Gilles Dartiguelongue <eva@gentoo.org> -eel-2.20.0.ebuild,
  -eel-2.22.2.ebuild:
  Clean up old revisions.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> eel-2.24.1.ebuild:
  sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> eel-2.24.1:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> eel-2.24.1.ebuild:
  arm stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> eel-2.24.1.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> eel-2.24.1.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> eel-2.24.1.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> eel-2.24.1.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> eel-2.24.1.ebuild:
  Marking eel-2.24.1 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> eel-2.24.1.ebuild:
  Marking eel-2.24.1 ppc64 stable for bug 260063

  22 Jan 2009; Raúl Porcel <armin76@gentoo.org> eel-2.24.1.ebuild:
  Add ~sh

  13 Nov 2008; Brent Baude <ranger@gentoo.org> eel-2.22.2.ebuild:
  Marking eel-2.22.2 ppc64 stable for bug 236971

*eel-2.24.1 (20 Oct 2008)

  20 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org> +eel-2.24.1.ebuild:
  New version for GNOME 2.24. Code cleanups and translation updates.

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> eel-2.22.2.ebuild:
  Stable for HPPA (bug #236971).

  13 Aug 2008; Mart Raudsepp <leio@gentoo.org> -eel-2.22.1.ebuild:
  Remove old

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> eel-2.22.2.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> eel-2.22.2.ebuild:
  x86 stable, bug #229709
