@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/eel
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/Attic/ChangeLog,v 1.216 2009/05/14 21:24:33 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/Attic/ChangeLog,v 1.217 2009/07/27 09:56:25 eva Exp $
+
+  27 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org> eel-2.24.1.ebuild:
+  Replace use of FEATURES, bug #278735.
 
   14 May 2009; Gilles Dartiguelongue <eva@gentoo.org> -eel-2.20.0.ebuild,
   -eel-2.22.2.ebuild:
